# claude-resume

./: README.md  pyproject.toml
src/claude_resume/: __init__.py  cli.py  db.py  embeddings.py  indexer.py  search.py  titles.py
