[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-resume"
version = "0.1.0"
description = "AI-powered conversation search for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "numpy>=1.24",
]

[project.scripts]
cresume = "claude_resume.cli:cli"

[project.urls]
Homepage = "https://github.com/aayushgandhi/claude-resume"
